# docs/swagger.yaml
@@ -18,6 +18,48 @@ definitions:
         example: "1"
         type: string
     type: object
+  controllers.categoryInfo:
+    properties:
+      details:
+        properties:
+          active:
+            example: "1"
+            type: string
+          created:
+            example: "2024-12-17T18:07:19+05:30"
+            type: string
+          icon:
+            example: https://quizbuck.s3.ap-south-1.amazonaws.com/uploads/1734090491_new.jpg
+            type: string
+          id:
+            example: 1
+            type: integer
+          join_amount:
+            example: 100
+            type: integer
+          num_of_users_can_join:
+            example: 20
+            type: integer
+          num_of_users_have_joined:
+            example: 0
+            type: integer
+          quiz_time:
+            example: "2024-12-17T18:00:00+05:30"
+            type: string
+          title:
+            example: GK
+            type: string
+          total_price:
+            example: 100000
+            type: integer
+        type: object
+      message:
+        example: Category list data found.
+        type: string
+      status:
+        example: "1"
+        type: string
+    type: object
   controllers.editProfileResponse:
     properties:
       message:
@@ -60,6 +102,53 @@ definitions:
         example: "0987656"
         type: string
       userId:
+        example: "1"
+        type: string
+    type: object
+  controllers.quizInfo:
+    properties:
+      details:
+        properties:
+          category_id:
+            example: 1
+            type: integer
+          correct_answer:
+            example: c
+            type: string
+          createdAt:
+            type: string
+          id:
+            example: 1
+            type: integer
+          level:
+            example: easy
+            type: string
+          option_a:
+            example: Unites States of America
+            type: string
+          option_b:
+            example: England
+            type: string
+          option_c:
+            example: India
+            type: string
+          option_d:
+            example: Sri Lanka
+            type: string
+          otp:
+            example: "8162"
+            type: string
+          question:
+            example: Where is Delhi?
+            type: string
+          userId:
+            example: 3
+            type: integer
+        type: object
+      message:
+        example: New user created
+        type: string
+      status:
         example: "1"
         type: string
     type: object
@@ -137,6 +226,42 @@ info:
   title: Quiz App API's
   version: "1.0"
 paths:
+  /quizes/get-categories:
+    get:
+      consumes:
+      - application/json
+      description: This API will provide list of quiz categories
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.categoryInfo'
+      summary: This API will provide list of quiz categories
+      tags:
+      - Quizes
+  /quizes/get-question-by-category/{category_id}:
+    get:
+      consumes:
+      - application/json
+      description: This API will provide list of quiz questions
+      parameters:
+      - description: quiz category id
+        in: path
+        name: category_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.quizInfo'
+      summary: This API will provide list of quiz questions
+      tags:
+      - Quizes
   /upload/file:
     post:
       consumes:
